Changed button name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="title"><span class="color-1">Sorting</span> <span class="color-1">Algorithms</span> <span class="color-1">Visualizer</span></h1>
         <nav class="navbar">
           <div class="nav-left">
-            <button type="button" class="btn new-array">new array</button>
+            <button type="button" class="btn new-array">Generate New Random Array</button>
             <div class="slider-container">
               <p class="slider-text">Array Size</p>
               <input class="array_size slider-input" type="range" min=2 max=40 step=1 value=10>
